# OpenGLRenderer

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
OpenGLRenderer/: AppState.h  CMakeLists.txt  ImGuiPanel.cpp  ImGuiPanel.h  OpenGLRenderer.cpp  Shader.h  camera.h
OpenGLRenderer/shaders/: fShader.glsl  fShader_lighting.glsl  fShader_material.glsl  fs_infinite_grid.glsl  fs_material_casters_dirlight.glsl  fs_material_casters_pointlight.glsl  fs_material_casters_spotlight.glsl  fs_material_diffuse.glsl  vShader.glsl  vShader_lighting.glsl  vShader_transform.glsl  vs_infinite_grid.glsl
